--- a/index.html
+++ b/index.html
@@ -4,26 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cultura de la ciudad Perico</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Conexión con CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Ciudad Perico</title>
+    <link rel="stylesheet" href="css/styles.css"> <!-- Conexión con css/styles.css -->
 </head>
 
 <body>
-     <header> <!--ENCABEZADO -->
-        
+    <header> <!-- ENCABEZADO -->
         <h1>Bienvenidos a la cultura de la ciudad de Perico</h1>
-
-        <nav><!-- Agrupa enlaces de navegación: Específicamente para menús o barras de navegación.-->
-             <a href="museos.html" class= "nav-enlace">Museos</a>  <!--me envia a la pagina museos-->
-             <a href="contacto.html" class="nav-enlace">Contactos</a> <!--me envia a la pagina contactos-->
+        <nav> <!--enlaces del encabezado -->
+            <a href="index.html" class="nav-enlace">Inicio</a>
+            <a href="museos.html" class="nav-enlace">Museos</a>
+            <a href="contacto.html" class="nav-enlace">Contactos</a>
         </nav>
     </header>
 
         <section class="Bordes_redondeados"> <!-- Sección con bordes redondeados -->
             <h2>Historia</h2>
             <p>
-                El 19 de abril de 1967 el gobernador de facto de Jujuy Darío Arias inauguró el aeropuerto internacional nombrado en ese entonces como El Cadillal, cuyo nombre sería cambiado al de Horacio Guzmán años más tarde como homenaje a quien fuera gobernador de la Provincia de Jujuy en dos oportunidades.
+               El 19 de abril de 1967 el gobernador de facto de Jujuy Darío Arias inauguró el aeropuerto internacional nombrado en ese entonces como El Cadillal, cuyo nombre sería cambiado al de Horacio Guzmán años más tarde como homenaje a quien fuera gobernador de la Provincia de Jujuy en dos oportunidades.
                Ese mismo día la localidad recibe el nombre de Ciudad Perico. Mientras tanto la producción tabacalera seguía creciendo, pasando a formar uno de los pilares productivos de la provincia, y en 1969 se forma la Cooperativa de Tabacaleros de Jujuy, que era a 2006 la principal exportadora de tabaco Blue Virginia del país. Estos dos hechos fueron muy importantes en la vida de la ciudad, que casi triplicó su población entre los años 1980 y 2001.          
                La Zona Franca de Perico promete ser un nuevo impulso a la ciudad, proveyendo de ventajas impositivas a las empresas que se radiquen en la zona y comunicación vial con los puertos del Atlántico y el Pacífico. La ciudad cuenta también con una una Agencia de Extensión Rural del Instituto Nacional de Tecnología Agropecuaria.
             </p>
@@ -58,9 +56,8 @@
 
         <section class="Bordes_redondeados"> <!-- Sección con bordes redondeados -->
             <h2>Lugares emblemáticos</h2>
-            <img src="1.jpg" alt="Parque retorno">
-            <!-- <p>parque retorno</p> -->
-            <img src="2.jpg" alt="Plaza central">
+            <img src="1.jpg" alt="Parque retorno" class="imagen-lugar">
+            <img src="2.jpg" alt="Plaza central" class="imagen-lugar">
         </section>
 
     <footer>
