--- a/museos.html
+++ b/museos.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/museos.css"> <!-- Conexión con css/museos.css -->
+    </head>
+
     <body>
-        <!-- lista de enlaces de museos  -->
-        <h1>lorem, ipsum dolor</h1>
-        <div> <!-- permite organizar varios elementos dentro de un contenedor. -->
-            <a href="#">Inicio</a>
-            <a href="#">Inicio</a>
-        </div>
+        <header> <!--ENCABEZADO -->
+            <h1>Mueseos</h1>
+            <nav>  <!--enlaces del encabezado -->
+                <a href="index.html" class="nav-enlace">Inicio</a> <!--me envia al index (pagina pricipal)-->
+                <a href="museos.html"class="nav-enlace">Museos</a>
+                <a href="contacto.html"class="nav-enlace">Contactos</a>
+            </nav>
+        </header> 
+        
+        <section class="Bordes_redondeados">
+            <p>La ciudad de Perico no cuenta con museos, pero aqui te dejo algunos museos que hay en
+                la provincia de Jujuy. Si quieres saber más sobre ellos, puedes hacer click en el 
+                nombre del museo y te llevará a su página oficial.
+                Los museos son lugares donde se conservan y exhiben objetos de valor histórico, artístico o científico y 
+                pueden ser de diferentes tipos, como museos de arte, museos de historia, museos de ciencias naturales, entre otros.
+                Los museos son importantes porque nos permiten aprender sobre nuestra historia, cultura y patrimonio, y nos ayudan 
+                a comprender mejor el mundo que nos rodea.  
+             </p>  <!--Lista de enlaces-->
+            <a href="https://www.turismo.jujuy.gob.ar/item/museo-arqueologico-eduardo-casanova/" ><h3>museo-arqueologico</h2></a>
+            <a href="https://www.turismo.jujuy.gob.ar/item/cabildo-de-jujuy/"><h3>Cabildo de San Salvador de Jujuy</h3> </a>
+            <a href="https://www.turismo.jujuy.gob.ar/item/museo-posta-de-hornillos/"><h3>Posta-de-hornillos</h3></a>
+         </section>
+
     </body>
+
 </html>
