--- a/contacto.html
+++ b/contacto.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
+    <link rel="stylesheet" href="css/contacto.css"> <!-- Conexión con CSS -->
 </head>
+
 <body>
-    
+    <header> <!-- ENCABEZADO -->
+        <h1>Formulario de Contacto</h1>
+        <nav> <!-- Barra de navegación -->
+            <a href="index.html" class="nav-enlace">Inicio</a>
+            <a href="museos.html" class="nav-enlace">Museos</a>
+            <a href="contacto.html" class="nav-enlace">Contactos</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="formulario-contacto">
+            <h2>Envíanos un mensaje</h2>
+            <form action="procesar_formulario.php" method="POST"> <!-- Cambia la acción según tu backend -->
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
+
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required>
+
+                <label for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" name="mensaje" placeholder="Escribe tu mensaje aquí..." rows="5" required></textarea>
+
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Ciudad Perico. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
