--- a/contacto.html
+++ b/contacto.html
@@ -17,12 +17,14 @@
         </nav>
     </header>
 
-    <main>
         <section class="formulario-contacto">
             <h2>Envíanos un mensaje</h2>
-            <form action="procesar_formulario.php" method="POST"> <!-- Cambia la acción según tu backend -->
+            <form action="procesar_formulario.php" method="POST" onsubmit="mostrarAlerta(event)"> 
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
+
+                <label for="apellido">Apellido:</label>
+                <input type="text" id="apellido" name="apellido" placeholder="Tu apellido" required>
 
                 <label for="email">Correo Electrónico:</label>
                 <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required>
@@ -33,10 +35,19 @@
                 <button type="submit">Enviar</button>
             </form>
         </section>
-    </main>
+
 
     <footer>
         <p>&copy; 2025 Ciudad Perico. Todos los derechos reservados.</p>
     </footer>
+
+    <script>
+        function mostrarAlerta(event) {
+            event.preventDefault(); 
+            var nombre = document.getElementById('nombre').value;
+            var apellido = document.getElementById('apellido').value;
+            alert(`Nombre: ${nombre} Apellido: ${apellido}`);
+        }
+    </script>
 </body>
 </html>
