--- a/museos.html
+++ b/museos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="css/museos.css"> <!-- Conexión con css/museos.css -->
+        <link rel="stylesheet" href="css/styles.css"> <!-- Conexión con css/museos.css -->
     </head>
 
     <body>
